# backend_infra_learning

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  cloudbuild.yaml  notes.md  pyproject.toml
.github/workflows/: lint.yml
infra/: main.tf  variables.tf
infra/iceberg/: catalog.tf  lakehouse.tf  notes.md  task.md  variables.tf
infra/postgres_api/: api.tf  postgres.tf  variables.tf  workload.tf
open_table_format_poc/: main.py
opf_poc/: main.py  notes.md
warehouse/: pyiceberg_catalog.db
warehouse/default.db/taxi_dataset/metadata/: 00000-0893978e-60a2-4687-85ef-4cb82302e4b6.metadata.json  00000-413fe679-bc86-4fbd-b40c-4435385a596a.metadata.json  00000-fb18f4fd-8cdc-42ea-b39e-37dbb4bf1c76.metadata.json  00001-01bfc4e6-f56b-47d5-914f-11ca279324a7.metadata.json  00001-891df86b-e83c-4a3a-9727-c974a92e7f59.metadata.json  00001-b8adb705-3894-4ef0-8d7c-8ae2428c2147.metadata.json  00002-d4ec5f21-13ab-4624-ab08-ecca5f3c6dbf.metadata.json  00002-f484864b-d120-4846-8839-d3983d3741a0.metadata.json  00003-f8c9e1ae-4acd-4181-b9a1-8f86ad976a84.metadata.json  15c5e222-3b37-4aa6-8bc8-b2516a5a471a-m0.avro  222dd0ea-8810-4439-9532-570c0f33bf2b-m0.avro  240fb374-1255-4630-a60d-f190e83ac6f8-m0.avro  2ea4fc3e-0b07-4dc1-8259-fb9ed04ee6f7-m0.avro  a1f9a835-39cb-4ac2-b7e5-b66f722e16ab-m0.avro  a4658c26-2b63-4932-89ad-fc59577e7cae-m0.avro  aef705a6-188e-4982-bd74-1c1846317844-m0.avro  bbaa5b9b-5738-482a-a2a0-caf641d0a91e-m0.avro  d0beac56-2280-440f-a5c6-66132a684bec-m0.avro  snap-1149182356356603385-0-222dd0ea-8810-4439-9532-570c0f33bf2b.avro  (+8 more)
webserver/: main.py
