[tool.poetry]
name = "backend-infra-learning"
version = "0.1.0"
description = ""
authors = ["Yannik Sacherer <A1DF6EF@jwpmx2kh4d.koeln.ads.risnet.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyiceberg = {extras = ["sql-sqlite"], version = "^0.9.0"}
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
