[tool.poetry]
name = "backend-infra-learning"
version = "0.1.0"
description = ""
authors = ["Yannik Sacherer <A1DF6EF@jwpmx2kh4d.koeln.ads.risnet.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyiceberg = {extras = ["sql-postgres"], version = "^0.9.0"}
pyarrow = "^19.0.1"
pre-commit = "^4.2.0"
ruff = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
