[tool.poetry]
name = "kubernetes etc"
version = "0.1.0"
description = ""
authors = ["Yannik Sacherer <yannik@sacherer.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
